--- a/lit_study/lit_table.tex
+++ b/lit_study/lit_table.tex
@@ -15,31 +15,31 @@
             \toprule
             \textbf{Author}              & \textbf{Year}                   & \textbf{\begin{tabular}[c]{@{}l@{}}Proposed\\ controller\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Baseline\\ controller\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Plant\\ model\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Parameter\\ uncertainty\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Unknown\\ dynamics\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Different \\ payloads\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Practical\\ data\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Outdoor\\ experiments\end{tabular}} \\ 
             \midrule
-            \citet{Muthusamy2021}        & \citeyear{Muthusamy2021}        & \gls{BFBEL}                                                            & PID                                                                    & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Allahverdy2021}       & \citeyear{Allahverdy2021}       & \gls{BISMC} with \gls{ILC}                                             & -                                                                      & non-linear                                                     & \ding{51}                                                                & \ding{51}                                                           &                                                                        &                                                                   &                                                                        \\
-            \citet{Faust2014}            & \citeyear{Faust2014}            & \gls{RL} (\gls{CAFVI})                                                 & -                                                                      & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Wang2020}             & \citeyear{Wang2020}             & \gls{ADRC}                                                             & PID                                                                    & linear                                                         & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         & \ding{51}                                                              \\
-            \citet{Hua2021}              & \citeyear{Hua2021}              & \gls{RL} (non-linear)                                                  & \gls{BS}, \gls{EB}                                                     & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Taylor2020}           & \citeyear{Taylor2020}           & \gls{H-inf} loop-shaping                                               & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
-            \citet{Erasmus2020}          & \citeyear{Erasmus2020}          & \gls{MRAC}                                                             & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              & \ding{51}                                                         & \ding{51}                                                              \\
-            \citet{Slabber2020}          & \citeyear{Slabber2020}          & \gls{NF} with \gls{LQR}                                                & \gls{PID}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
-            \citet{Dai2014}              & \citeyear{Dai2014}              & \gls{RCAC}                                                             & -                                                                      & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Santos2016}           & \citeyear{Santos2016}           & \gls{MPC}                                                              & -                                                                      & linear                                                         & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Andrade2016}          & \citeyear{Andrade2016}          & \gls{MPC}                                                              & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Zurn2016}             & \citeyear{Zurn2016}             & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Son2019}              & \citeyear{Son2019}              & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Son2018}              & \citeyear{Son2018}              & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Son2017}              & \citeyear{Son2017}              & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Trachte2014}          & \citeyear{Trachte2014}          & \gls{MPC}                                                              & \gls{LQR}                                                              & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Trachte2015}          & \citeyear{Trachte2015}          & \gls{MPC}                                                              & \gls{LQR}                                                              & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Liang2021}            & \citeyear{Liang2021}            & Non-linear                                                              & \gls{LQR}, \gls{PD}                                                    & non-linear                                                     &                                                                          &                                                                     & \ding{51}                                                              & \ding{51}                                                         &                                                                        \\
-            \citet{Zeng2019a}            & \citeyear{Zeng2019a}            & Geometric                                                              & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Yang2018}             & \citeyear{Yang2018}             & \gls{RISE}                                                             & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Martinez-Vasquez2020} & \citeyear{Martinez-Vasquez2020} & \gls{SMC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Mosco-Luciano2020}    & \citeyear{Mosco-Luciano2020}    & \gls{BS}                                                               & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Rigatos2018}          & \citeyear{Rigatos2018}          & \gls{H-inf}                                                            & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Alothman2015}         & \citeyear{Alothman2015}         & \gls{LQR}                                                              & \gls{PD}                                                               & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Alothman2016}         & \citeyear{Alothman2016}         & \gls{iLQR}                                                             & \gls{LQR}                                                              & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Muthusamy2021}        & \citeyear{Muthusamy2021}        & \acrshort{BFBEL}                                                            & PID                                                                    & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Allahverdy2021}       & \citeyear{Allahverdy2021}       & \acrshort{BISMC} with \acrshort{ILC}                                        & -                                                                      & non-linear                                                     & \ding{51}                                                                & \ding{51}                                                           &                                                                        &                                                                   &                                                                        \\
+            \citet{Faust2014}            & \citeyear{Faust2014}            & \acrshort{RL} (\acrshort{CAFVI})                                            & -                                                                      & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Wang2020}             & \citeyear{Wang2020}             & \acrshort{ADRC}                                                             & PID                                                                    & linear                                                         & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         & \ding{51}                                                              \\
+            \citet{Hua2021}              & \citeyear{Hua2021}              & \acrshort{RL} (non-linear)                                                  & \acrshort{BS}, \acrshort{EB}                                           & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Taylor2020}           & \citeyear{Taylor2020}           & \acrshort{H-inf} loop-shaping                                               & \acrshort{LQR}                                                         & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
+            \citet{Erasmus2020}          & \citeyear{Erasmus2020}          & \acrshort{MRAC}                                                             & \acrshort{LQR}                                                         & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              & \ding{51}                                                         & \ding{51}                                                              \\
+            \citet{Slabber2020}          & \citeyear{Slabber2020}          & \acrshort{NF} with \acrshort{LQR}                                           & \acrshort{PID}                                                         & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
+            \citet{Dai2014}              & \citeyear{Dai2014}              & \acrshort{RCAC}                                                             & -                                                                      & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Santos2016}           & \citeyear{Santos2016}           & \acrshort{MPC}                                                              & -                                                                      & linear                                                         & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Andrade2016}          & \citeyear{Andrade2016}          & \acrshort{MPC}                                                              & \acrshort{LQR}                                                         & linear                                                         & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Zurn2016}             & \citeyear{Zurn2016}             & \acrshort{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Son2019}              & \citeyear{Son2019}              & \acrshort{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Son2018}              & \citeyear{Son2018}              & \acrshort{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Son2017}              & \citeyear{Son2017}              & \acrshort{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Trachte2014}          & \citeyear{Trachte2014}          & \acrshort{MPC}                                                              & \acrshort{LQR}                                                         & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Trachte2015}          & \citeyear{Trachte2015}          & \acrshort{MPC}                                                              & \acrshort{LQR}                                                         & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Liang2021}            & \citeyear{Liang2021}            & Non-linear                                                                  & \acrshort{LQR}, \acrshort{PD}                                          & non-linear                                                     &                                                                          &                                                                     & \ding{51}                                                              & \ding{51}                                                         &                                                                        \\
+            \citet{Zeng2019a}            & \citeyear{Zeng2019a}            & Geometric                                                                   & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Yang2018}             & \citeyear{Yang2018}             & \acrshort{RISE}                                                             & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Martinez-Vasquez2020} & \citeyear{Martinez-Vasquez2020} & \acrshort{SMC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Mosco-Luciano2020}    & \citeyear{Mosco-Luciano2020}    & \acrshort{BS}                                                               & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Rigatos2018}          & \citeyear{Rigatos2018}          & \acrshort{H-inf}                                                            & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Alothman2015}         & \citeyear{Alothman2015}         & \acrshort{LQR}                                                              & \acrshort{PD}                                                          & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Alothman2016}         & \citeyear{Alothman2016}         & \acrshort{iLQR}                                                             & \acrshort{LQR}                                                         & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
             \bottomrule
         \end{tabularx}
         \label{tbl:lit}
