Finished lit study editing of willem review

--- a/control/control.tex
+++ b/control/control.tex
@@ -27,7 +27,7 @@
         \caption{System identification techniques paired with the corresponding controllers.}
         \begin{tabular}{|ll|c|}
             \hline
-            \multicolumn{2}{|l|}{\textbf{System identification}}              & \textbf{Controller} \\
+            \multicolumn{2}{|c|}{\textbf{System identification}}              & \textbf{Controller} \\
             % \cmidrule(lr){1-2}
             % \textbf{Model type}     & \textbf{Algorithm}                    & \\
             \hline
