--- a/glossary.tex
+++ b/glossary.tex
@@ -1,12 +1,12 @@
 % Glossary Entries
 
 % Acronym Entries
-\newacronym{DoF}{DoF}{Degree of Freedom}
+\newacronym{DoF}{DoF}{Degree-of-Freedom}
 \newacronym{CoM}{CoM}{Centre of Mass}
 \newacronym{2D}{2D}{Two Dimensional}
 \newacronym{3D}{3D}{Three Dimensional}
-\newacronym{6DOF}{6DOF}{Six Degrees of Freedom}
-\newacronym{NED}{NED}{North East Down}
+\newacronym{6DOF}{6DOF}{Six-Degrees-of-Freedom}
+\newacronym{NED}{NED}{North-East-Down}
 
 \newacronym{MRAC}{MRAC}{Model Reference Adaptive Control}
 \newacronym{ARC}{ARC}{Adaptive Robust Control}
